welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: '(' expected but identifier found.
  for k(<-1 to n-1){
      ^