welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var n  = nums.length
  var niv=1
  var haut=nums(0)
  for k(<-1 to n-1){
    if (nums(k)>haut){
      niv=niv+1
      haut=num(k)
    }
    else{
      niv=niv
      haut=haut
    }
  }
  return niv
}